<resources>
    <string name="app_name">AnimeTasteEX</string>

    <!--loading-->
    <string name="loading_wrong_message">获取网络数据失败，转向离线数据</string>

    <!--login-->
    <string name="login_user_hint">用户名</string>
    <string name="login_password_hint">密码 </string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_phone">手机号</string>
    <string name="login_phone_invalid">手机号不正确</string>
    <string name="login_login_failed">登录失败</string>
    <string name="login_register_failed">注册失败</string>
    <string name="login_username_empty">用户名不能为空</string>
    <string name="login_password_empty">密码不能为空</string>

</resources>
