<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Chris Banes
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:honestme="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
          android:layout_width="match_parent"
          android:layout_height="0px"
          android:layout_weight="1">

        <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:layout_margin="30dp"
              android:animateLayoutChanges="true">



            <com.honestme.animetasteex.FloatLabelLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/login_user_margin_top"
                  honestme:floatLabelTextAppearance="@style/TextAppearance.honestme.FloatLabel"
                  >

                <EditText
                      android:id="@+id/edit_login"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/login_user_hint"
                      android:maxLines="1"
                      android:singleLine="true"
                      android:inputType="textNoSuggestions"
                      android:imeOptions="actionNext"
                      android:nextFocusDown="@+id/edit_password" />

            </com.honestme.animetasteex.FloatLabelLayout>

            <com.honestme.animetasteex.FloatLabelLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/login_password_margin_top"
                  honestme:floatLabelTextAppearance="@style/TextAppearance.honestme.FloatLabel"
                  >

                <EditText
                      android:id="@+id/edit_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/login_password_hint"
                      android:inputType="textPassword"
                      android:singleLine="true"
                      android:imeOptions="actionDone" />

            </com.honestme.animetasteex.FloatLabelLayout>

            <com.honestme.animetasteex.FloatLabelLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/login_phone_margin_top"
                  honestme:floatLabelTextAppearance="@style/TextAppearance.honestme.FloatLabel">

                <AutoCompleteTextView
                      android:id="@+id/login_phone"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/login_phone"
                      android:inputType="textEmailAddress"
                      android:selectAllOnFocus="true" />

            </com.honestme.animetasteex.FloatLabelLayout>

            <RadioGroup
                  android:id="@+id/rg_type"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="horizontal"
                  >

                <RadioButton
                      android:id="@+id/rb_login"
                      android:text="@string/login_login"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />

                <RadioButton
                      android:id="@+id/rb_create"
                      android:text="@string/login_register"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="?android:attr/dividerVertical" />

    <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="?android:buttonBarStyle">

        <Button
              android:id="@+id/btn_submit"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/login_login"
              style="?android:buttonBarButtonStyle" />

    </LinearLayout>


</LinearLayout>